Fix icons occasionally stretching out vertically

--- a/style/grid.css
+++ b/style/grid.css
@@ -3,6 +3,7 @@ gaia-container {
   overflow: hidden;
   display: flex;
   flex-flow: row wrap;
+  align-content: flex-start;
   transition: opacity 0.2s;
   box-sizing: padding-box;
   padding: 1.5vw;
